1차 완료 후 1차 수정

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,42 @@
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 768px) {
+  .tablet {
+    display: none !important;
+  }
+  .moblie {
+    display: block !important;
+  }
+  .intro .intro_title {
+    color: var(--color-white);
+    position: relative;
+    z-index: 1;
+  }
+  .intro .intro_title span {
+    display: block;
+    margin-bottom: 8px;
+  }
+  .intro .intro_title span p {
+    font-size: 18px !important;
+    font-weight: 500;
+    letter-spacing: -1.5px;
+  }
+  .intro .intro_title h1 {
+    font-size: 68px !important;
+    line-height: 74px !important;
+    font-weight: 900;
+    letter-spacing: -2px;
+    text-shadow: 4px 10px 14px rgba(0, 0, 0, 0.15);
+  }
+  .intro .intro_title .intro_sub_title {
+    padding: 14px 0;
+    line-height: 22px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .point_list ul li {
+    flex-direction: column;
+    width: 100% !important;
+    padding: 18px !important;
+  }
   .shop_point ul li {
     width: 100% !important;
   }
@@ -29,5 +67,8 @@
   }
   .premium .premium_item_list ul li img {
     height: 240px !important;
+  }
+  .list_tab_button ul li {
+    width: calc(50% - 6px) !important;
   }
 }/*# sourceMappingURL=responsive.css.map */
