--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -9,6 +9,50 @@
 
 // 모바일에서 태블릿
 @include mobile {
+  .tablet {
+    display: none !important;
+  }
+  .moblie {
+    display: block !important;
+  }
+  .intro {
+    .intro_title {
+      color: var(--color-white);
+      position: relative;
+      z-index: 1;
+      span {
+        display: block;
+        margin-bottom: 8px;
+        p {
+          font-size: 18px !important;
+          font-weight: 500;
+          letter-spacing: -1.5px;
+        }
+      }
+      h1 {
+        font-size: 68px !important;
+        line-height: 74px !important;
+        font-weight: 900;
+        letter-spacing: -2px;
+        text-shadow: 4px 10px 14px rgba(0, 0, 0, 0.15);
+      }
+      .intro_sub_title {
+        padding: 14px 0;
+        line-height: 22px;
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+  }
+  .point_list {
+    ul {
+      li {
+        flex-direction: column;
+        width: 100% !important;
+        padding: 18px !important;
+      }
+    }
+  }
   .shop_point {
     ul {
       li {
@@ -49,6 +93,13 @@
             height: 240px !important;
           }
         }
+      }
+    }
+  }
+  .list_tab_button {
+    ul {
+      li {
+        width: calc(100% / 2 - 6px) !important;
       }
     }
   }
