복지몰 삭제

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,5 +70,6 @@
   }
   .list_tab_button ul li {
     width: calc(50% - 6px) !important;
+    padding: 16px !important;
   }
 }/*# sourceMappingURL=responsive.css.map */
