--- a/css/style.scss
+++ b/css/style.scss
@@ -398,6 +398,7 @@
       .tablet_contents {
         display: flex;
         margin-top: 60px;
+        padding: 0 12px;
         #content-basic {
           .prod_name {
             background-color: var(--bg-color-blue);
