--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,10 @@
 .container .service .service_tab_wrap .tablet_contents #content-basic .prod_name {
   background-color: var(--bg-color-blue);
 }
+.container .service .service_tab_wrap .tablet_contents #content-standard {
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+}
 .container .service .service_tab_wrap .tablet_contents #content-standard .prod_name {
   background-color: var(--bg-color-gray);
 }
