--- a/css/style.scss
+++ b/css/style.scss
@@ -430,6 +430,8 @@
           }
         }
         #content-standard {
+          border-left: 1px solid var(--border-color);
+          border-right: 1px solid var(--border-color);
           .prod_name {
             background-color: var(--bg-color-gray);
           }
