--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-image: url("/img/intro_bg.png");
+  background-image: url(./img/intro_bg.png);
   opacity: 0.125;
   width: 100%;
   height: 520px;
