배경이미지 수정

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,7 +34,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background-image: url(./img/intro_bg.png);
+    background-image: url("../img/intro_bg.png");
     opacity: 0.125;
     width: 100%;
     height: 520px;
